# anthropic-api-cource

./: 001_chunking.ipynb  001_prompt_evals.ipynb  001_prompt_evals_fns.ipynb  001_prompting.ipynb  001_requests.ipynb  001_thinking.ipynb  001_tools.ipynb  002_embeddings.ipynb  002_images.ipynb  002_images_pdf.ipynb  002_images_pdf_citations.ipynb  003_caching.ipynb  003_vectordb.ipynb  004_bm25.ipynb  005_hybrid.ipynb  005_text_editor_tool.ipynb  006_web_search.ipynb  README.md  dataset.json  main.py  output.html  output.json  pyproject.toml
.claude/agents/: mcp-protocol-tutor.md
mcp/cli_project/: .CLAUDE.md.swp  main.py  mcp_client.py  mcp_server.py
mcp_cource/advanced/roots/: .env.example
mcp_cource/advanced/roots/core/: claude.py  cli.py
mcp_cource/advanced/sampling/: client.py  pyproject.toml
mcp_cource/advanced/sampling/sampling.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mcp_cource/advanced/transport-http/: index.html  main.py
mcp_cource/basics/: mcp_client.py  mcp_server.py
