[project]
name = "anthropic-api-cource"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.98.0",
    "python-dotenv>=1.2.2",
    "voyageai>=0.3.7",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.uv.workspace]
members = [
    "mcp_cource/advanced/sampling",
]
